--- a/Loki/loki-config.yaml
+++ b/Loki/loki-config.yaml
@@ -52,3 +52,5 @@ ruler:
 # If you would like to disable reporting, uncomment the following lines:
 #analytics:
 #  reporting_enabled: false
+
+# Ref: https://grafana.com/docs/loki/latest/configuration/
